--- a/.github/workflows/deploy to github pages.yml
+++ b/.github/workflows/deploy to github pages.yml
@@ -52,3 +52,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}  # 自动生成的令牌
